--- a/views/recovery/store.ejs
+++ b/views/recovery/store.ejs
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3">
                     <h2>Recuperar senha</h2>
-                    <hr /><br /> 
+                    <hr /><br />
 
                     <% if(success){ %>
                         <div class="alert alert-success">
@@ -30,16 +30,16 @@
                         <p>
                             Digite aqui sua nova senha
                         </p>
-    
-                        <form action="/v1/api/usuarios/senha recuperada" method="POST">
-                            <input 
+
+                        <form action="/v1/api/usuarios/senha-recuperada" method="POST">
+                            <input
                                 type="hidden"
                                 name="token"
                                 value="<%= token %>"
                             />
-                            
+
                             <div class="form-group">
-                                <input 
+                                <input
                                     type="password"
                                     name="password"
                                     class="form-control"
